--- a/src/components/NavBarComponent/NavBarComponent.css
+++ b/src/components/NavBarComponent/NavBarComponent.css
@@ -1,19 +1,57 @@
 
 
-.navbar__links:link {
-    text-decoration: none !important;
+  .dropdown-menu a{
+    width: 140px;
+    text-decoration: none;
   }
   
-  .navbar__links:visited {
-    text-decoration: none !important;
+  .dropdown-menu {
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    height: 170px;
+  }
+
+  .dropdown-menu p{
+    padding-top: 0;
+    padding-bottom: 0;
+    margin: 0;
   }
   
-  .navbar__links:hover {
-    text-decoration: none !important;
+
+  .nav-item a {
+    text-decoration: none;
+    padding: 0.375rem;
+    
   }
-  
-  .navbar__links:active {
-    text-decoration: none !important;
+
+  .dropdown-toggle {
+    text-decoration: none;
+    border: 1px solid;
+    border-radius: 0.375rem;
+    background-color: #212529;
+    color: #6c757d;
+    transition: .2s ease-in-out;
+  }
+
+  .dropdown-toggle:hover {
+    transform: scale(1.1);
+    
+  }
+
+  .home__btn {
+    border-radius: 0.375rem;
+    background-color: #212529;
+    color: #6c757d;
+    transition: .2s ease-in-out;
+  }
+
+  .home__btn:hover {
+    transform: scale(1.1);
+  }
+
+  .dropdown-item {
+    color: #212529;
   }
 
 
