--- a/src/components/ProductsComponents/ContainerProducts/ContainerProducts.css
+++ b/src/components/ProductsComponents/ContainerProducts/ContainerProducts.css
@@ -11,4 +11,16 @@
     border-left: 1px solid rgba(255, 255, 255, 0.5) !important;
     backdrop-filter: blur(5px) !important;
     padding: 0 !important;
+    
   }
+
+  .tilt__container svg {
+    height: 100vh;
+  }
+
+
+.loading-box {
+  height: 75vh;
+  display: grid;
+  place-items: center;
+}
