--- a/src/components/CartComponents/CartLogo/CartLogo.css
+++ b/src/components/CartComponents/CartLogo/CartLogo.css
@@ -1,3 +1,33 @@
+.cart_logo--quantity {
+    font-size: 1rem;
+    
+}
+
 .cart__logo {
-    margin: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    border-radius: 15px;
+    margin-right: 2rem;
+    padding-right: 10px;
+    padding-left: 10px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+
+
+}
+
+.cart__logo:hover {
+    transform: scale(1.1);
+    
+}
+
+
+.cart__logo a {
+    display: flex;
+    justify-content: space-evenly;
+    
+    align-items: center;
+    width: 4rem;
+    gap: 0.5vw;
 }
