--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,11 +1,18 @@
-.header__box {
-    box-shadow: 20px 20px 50px rgba(0, 0, 0, 6) ; 
-    background: rgba(255, 255, 255, 0.1) ;
-    backdrop-filter: blur(5px) ;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.5) ;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 1.5rem;
-  }
-  
+.header__container {
+  box-shadow: 20px 20px 50px rgba(0, 0, 0, 6);
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(5px);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  font-size: 1.5rem;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+
+}
+
+.nav__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
