--- a/src/components/Header/NavBar/IconUser/IconUser.css
+++ b/src/components/Header/NavBar/IconUser/IconUser.css
@@ -4,9 +4,20 @@
     margin: 0;
 }
 
-.icon__user{
-    gap: 1rem;
+.icon__user p:hover {
+    gap: 0.5rem;
+    margin: 0;
+    text-decoration: underline;
 }
+
+.icon__user{
+    gap: 0.5rem;
+}
+
+.icon__user:hover{
+    text-decoration: underline;
+}
+
 
 
 a:link {
