--- a/src/components/ProductsComponents/ContainerProducts/ContainerProducts.css
+++ b/src/components/ProductsComponents/ContainerProducts/ContainerProducts.css
@@ -1,26 +1,45 @@
 .card__container {
-    background: none !important;
-  }
-  
-  .tilt__container {
-    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5) !important; 
-    background: rgba(255, 255, 255, 0.1) !important;
-    overflow: hidden !important;
-    color: aliceblue !important;
-    border-top: 1px solid rgba(255, 255, 255, 0.5) !important;
-    border-left: 1px solid rgba(255, 255, 255, 0.5) !important;
-    backdrop-filter: blur(5px) !important;
-    padding: 0 !important;
-    
-  }
+  background: none !important;
+}
 
-  .tilt__container svg {
-    height: 100vh;
-  }
+.tilt__container {
+  box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5) !important;
+  background: rgba(255, 255, 255, 0.1) !important;
+  overflow: hidden !important;
+  color: aliceblue !important;
+  border-top: 1px solid rgba(255, 255, 255, 0.5) !important;
+  border-left: 1px solid rgba(255, 255, 255, 0.5) !important;
+  backdrop-filter: blur(5px) !important;
+  padding: 0 !important;
+  height: 40vh;
+
+}
+
+
 
 
 .loading-box {
   height: 75vh;
   display: grid;
   place-items: center;
+}
+
+
+.container__search {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  padding: 2rem;
+}
+
+
+.container__input {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.test {
+  min-height: 100vh;
 }
