--- a/src/components/Header/NavBar/NavBar.css
+++ b/src/components/Header/NavBar/NavBar.css
@@ -2,8 +2,10 @@
     text-decoration: underline;
 }
 
-
 .products-access:hover {
     text-decoration: underline;
 }
 
+.logout-access {
+    text-decoration: underline;
+}
