--- a/src/components/ProductsComponents/Product/Product.css
+++ b/src/components/ProductsComponents/Product/Product.css
@@ -92,3 +92,15 @@
   height: 2rem;
   border: 0.1px solid black;
  }
+
+ .btn__favourites--on {
+  color: tomato;
+ }
+
+ .btn__favourites:hover {
+  transform: scale(1.3);
+ }
+
+ .btn__favourites--off {
+  color:palegreen;
+ }
