--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,11 @@ body {
   background-attachment: fixed;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 code {
