--- a/src/components/ProductsComponents/ContainerProducts/ContainerProducts.css
+++ b/src/components/ProductsComponents/ContainerProducts/ContainerProducts.css
@@ -12,7 +12,6 @@
   backdrop-filter: blur(5px) !important;
   padding: 0 !important;
   height: 40vh;
-
 }
 
 
@@ -27,7 +26,7 @@
 
 .container__search {
   position: sticky;
-  top: 0;
+  top: 7rem;
   z-index: 1;
   padding: 2rem;
 }
